# ik-geo

./: .gitignore  Cargo.toml  README.md  outfile.urdf  test.py
.github/workflows/: ik_geo_python.yml  ik_python.yml
config/: dh_config.yaml
examples/: sample.py
examples/cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/cpp/include/: ik_geo.h
examples/python/: sample.py
ik_cpp/: .gitignore  CMakeLists.txt  README.md  ik_geo.h
ik_cpp/cpp/: main.cpp  robot.cpp  robot.hpp
ik_cpp/rust-wrapper/: Cargo.toml
ik_cpp/rust-wrapper/src/: lib.rs
ik_geo_python/: Cargo.toml  pyproject.toml
ik_geo_python/src/: lib.rs
ik_geo_python/test/: test.py
ik_python/: .gitignore  Cargo.toml  README.md  ik_geo.pyi  ik_python.pyi  pyproject.toml  sample.py
ik_python/examples/: sample.py
ik_python/src/: lib.rs
ik_python/test/: general_solver_errors.txt  hardcoded_setups_errors.txt  test.py
rust/: Cargo.toml
rust/src/inverse_kinematics/: auxiliary.rs  mod.rs  setups.rs
rust/src/inverse_kinematics/hardcoded/: setups.rs
scripts/: dh_to_kin.py  dh_to_urdf.py  help_maths.py  test_ik.py  yaml_parser.py
scripts/tools/: __init__.py  help_maths.py  yaml_parser.py
src/: lib.rs
test/: test.py  test_ik.py
